--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,7 @@
       
   /* Hero Section */
   .hero-section {
-    background-image: url("/static/images/talkwithsian-hero-1.jpg");
+    background-image: url("images/hero-1.jpg");
     background-size: cover;
     background-position: center;
     color: #ffffff;
