--- a/css/custom.css
+++ b/css/custom.css
@@ -119,7 +119,7 @@ body {
     bottom: 0;
     width: 100%;
     background-color: indigo;
-    color: #fff;
+    color: #fff !important;
     padding: 15px 30px;
     box-shadow: 0 -2px 10px rgba(0,0,0,.1);
     z-index: 1000;
@@ -127,6 +127,7 @@ body {
   .cookie-consent-banner p {
     margin: 0;
     font-size: 1rem;
+    color: #fff !important;
   }
   .cookie-consent-banner a {
     color: #c9a0dc;
