--- a/css/home.css
+++ b/css/home.css
@@ -22,7 +22,7 @@
 .hero-section p {
     font-size: 1.5rem;
     margin-bottom: 2rem;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); /* Strong shadow for readability */
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7) !important; /* Strong shadow for readability */
 }
 
 .hero-section .btn-primary {
